# hexarover

./: .gitignore  .gitmodules  README.md  README_IMU.md  README_LIDAR.md  build_and_run.sh  dependencies.sh  lidar.rviz
research/: human_detector.py
src/cytron_driver/: package.xml  setup.cfg  setup.py
src/cytron_driver/cytron_driver/: cytron_node.py  imu_node.py
src/hexarover_bringup/: CMakeLists.txt  package.xml
src/hexarover_bringup/config/: ekf.yaml  nav2.yaml  rf2o.yaml  scan_matcher.yaml  slam_toolbox.yaml
src/hexarover_bringup/launch/: dev_vision.launch.py  hexarover.launch.py
src/hexarover_bringup/rviz/: rviz.rviz  vision_dev.rviz
src/hexarover_description/: CMakeLists.txt  package.xml
src/hexarover_description/urdf/: hexarover.urdf.xacro
src/hexarover_gazebo/: CMakeLists.txt  package.xml
src/hexarover_gazebo/worlds/: obstacles.sdf
src/hexarover_vision/: package.xml  setup.cfg  setup.py
src/hexarover_vision/hexarover_vision/: follower_node.py  video_publisher.py  vision_node.py
src/imu_publisher/: package.xml  setup.py
vision_system/: human_detector.py
